# pico-test

./: CMakeLists.txt  build.sh  main.c  serial_out.sh
NeoPixel/: code.py  main.py
